# middlewares/auth_admin.go
@@ -1,0 +1,33 @@
+package middlewares
+
+import (
+	"gin_oj/helper"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// AuthAdminCheck
+// 验证用户是否是管理员
+func AuthAdminCheck() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		auth := c.GetHeader("Authorization")
+		userClaim, err := helper.AnalyseToken(auth)
+		if err != nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "Unauthorized Authentication",
+			})
+			return
+		}
+		println(userClaim)
+		if userClaim.IsAdmin != 1 {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "Unauthorized Admin",
+			})
+			return
+		}
+	}
+}
