# router/app.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	_ "gin_oj/docs"
+	"gin_oj/middlewares"
 	"gin_oj/service"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -22,9 +23,12 @@ func Router() *gin.Engine {
 	r.POST("/user-login", service.Login)
 	r.POST("/user-send_code", service.SendCode)
 	r.POST("/user-register", service.Register)
-
+	//排行榜
+	r.GET("/rank-list", service.GetRankList)
 	//submit
 	r.GET("/submit-list", service.GetSubmitList)
 
+	// 管理员私有方法
+	r.POST("/problem-create", middlewares.AuthAdminCheck(), service.ProblemCreate)
 	return r
 }
