# service/user.go
@@ -2,12 +2,14 @@ package service
 
 import (
 	"fmt"
+	"gin_oj/define"
 	"gin_oj/helper"
 	"gin_oj/models"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 	"log"
 	"net/http"
+	"strconv"
 	"time"
 )
 
@@ -80,7 +82,7 @@ func Login(c *gin.Context) {
 		})
 		return
 	}
-	token, err := helper.GeneratorToken(data.Identity, data.Name)
+	token, err := helper.GeneratorToken(data.Identity, data.Name, data.IsAdmin)
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{
 			"code": "-1",
@@ -204,7 +206,7 @@ func Register(c *gin.Context) {
 	}
 
 	//生成token
-	token, err := helper.GeneratorToken(data.Identity, data.Name)
+	token, err := helper.GeneratorToken(data.Identity, data.Name, data.IsAdmin)
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{
 			"code": -1,
@@ -217,6 +219,40 @@ func Register(c *gin.Context) {
 		"code": 200,
 		"data": map[string]interface{}{
 			"token": token,
+		},
+	})
+}
+
+// GetRankList
+// @Tags 公共方法
+// @Summary 用户排行榜
+// @Param page query int false "请输入当前页，默认第一页"
+// @Param size query int false "size"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /rank-list [get]
+func GetRankList(c *gin.Context) {
+	page, _ := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	size, _ := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
+	//page 1 --> 0
+
+	page = (page - 1) * size // 起始位置
+	var count int64
+
+	list := make([]*models.UserBasic, 0)
+	err := models.DB.Model(new(models.UserBasic)).Count(&count).Order("finish_problem_num DESC, submit_num ASC").
+		Offset(page).Limit(size).Find(&list).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": "200",
+			"msg":  "Get Rank List Error" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": "200",
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
 		},
 	})
 }
